Fix alignment issue with status bar overflow

--- a/src/components/status-bar/status-bar.module.css
+++ b/src/components/status-bar/status-bar.module.css
@@ -1,8 +1,16 @@
 .statuses {
+  gap: 50px;
   padding: 10px 0px;
+
+  width: fit-content;
+  margin: auto;
+}
+
+.statuses-background {
   box-shadow: rgba(16, 23, 27, 0.52) 0px 0px 13px 3px inset;
   background-color: var(--background-color-light);
-  gap: 50px;
+  overflow-x: scroll;
+  width: 100%;
 }
 
 .status-item {
